[Win32] Start releasing memory earlier when memory is running low. https://bugs.webkit.org/show_bug.cgi?id=164862

Reviewed by Brent Fulgham.

On Windows, 32-bit processes have 2GB of memory available, where some is used by the system.
Debugging has shown that allocations might fail and cause crashes when memory usage is > ~1GB.
We should start releasing memory before we reach 1GB.

* platform/win/MemoryPressureHandlerWin.cpp:
(WebCore::CheckMemoryTimer::fired):


Canonical link: https://commits.webkit.org/182594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208883 268f45cc-cd09-0410-ab3c-d52691b4dbfc